--- a/F-Crawler/F-Crawler.fsproj
+++ b/F-Crawler/F-Crawler.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Units.fs" />
     <Compile Include="FileHandle.fs" />
     <Compile Include="DataStructures.fs" />
     <Compile Include="Parser.fs" />
